# npu_multithreading_rock

./: CMakeLists.txt  README.md  YoloV5_multi.cbp
src/: main.cc  rkYolov5s.cc
